traefik/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik.k8s.local
    http:
      paths: 
      - pathType: Prefix
        path: /
        backend:
          service:
            # 后台部署的 Service Name
            name: traefik-ingress-service
            # 后台部署的 Service Port
            port:
              number: 8080
